books/ex280-book-v1/ex280-lab02/np-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: ex280-lab02
spec:
  podSelector: {}           # tous les pods du namespace
  policyTypes:
  - Ingress
  ingress: []               # aucune règle autorisée -> tout ingress refusé
